--- a/lin-or-profiles/index.css
+++ b/lin-or-profiles/index.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url("pics/backround.png");
+}
+
 img{
     border-radius: 50%;
 }
@@ -18,3 +22,4 @@ img{
     right: 10px; 
     bottom: 10px; 
 }
+
