remove css works on container class

--- a/tang-gouba-profile/index.css
+++ b/tang-gouba-profile/index.css
@@ -1,6 +1,4 @@
-.container{
-    grid-template-columns: auto auto auto;
-}
+/* 
 #grid1{
     width: 20%;
     padding: 10px;
@@ -85,4 +83,4 @@
 }
 #grid25{
     width: 20%;
-}
+} */
