remove bage css

--- a/index.css
+++ b/index.css
@@ -40,9 +40,9 @@ img {
   height: auto;
 }
 
-.badge {
+/* .badge {
   position: absolute;
   top: 0;
   right: 0;
   display:inline-block;
-}
+} */
